Editor tools should be able to wrap one by one in Internet Explorer. Fixes #4544

--- a/styles/web/common/editor.less
+++ b/styles/web/common/editor.less
@@ -42,6 +42,7 @@ table.k-editor
     list-style-type: none;
     line-height: 1.3em;
     cursor: default;
+    word-wrap: break-word; /* allow tools to wrap properly in IE */
 }
 
 .k-editor-toolbar li
